update filenames for x_counts

--- a/analysis1_parallyze.ipynb
+++ b/analysis1_parallyze.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:89e33ef001c6efd45d0ce752b1b6e8ec8d92a5d82b1ab74743f7acd39cf1c571"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -28,7 +29,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "sim_mut_counts = pd.read_csv('sim_mut_counts.csv', index_col=0)"
+      "simulated_mutations_counts = pd.read_csv('simulated_mutations_counts.csv', index_col=0)"
      ],
      "language": "python",
      "metadata": {},
@@ -39,7 +40,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "exp_mut_counts = pd.read_csv('exp_mut_counts.csv', index_col=0)"
+      "experimental_mutations_counts = pd.read_csv('experimental_mutations_counts.csv', index_col=0)"
      ],
      "language": "python",
      "metadata": {},
@@ -50,9 +51,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "all_muts = pd.DataFrame(index=exp_mut_counts.index)\n",
-      "all_muts['exp'] = exp_mut_counts\n",
-      "all_muts['sim'] = sim_mut_counts.sum(axis=1)/25"
+      "all_muts = pd.DataFrame(index=experimental_mutations_counts.index)\n",
+      "all_muts['exp'] = experimental_mutations_counts\n",
+      "all_muts['sim'] = simulated_mutations_counts.sum(axis=1)/25"
      ],
      "language": "python",
      "metadata": {},
@@ -88,7 +89,7 @@
      "input": [
       "all_muts.hist(sharex=True)\n",
       "axis(xmax=5)\n",
-      "savefig('exp_sim_hist_separate.png')"
+      "savefig('experimental_simulated_histograms_separate.png')"
      ],
      "language": "python",
      "metadata": {},
@@ -111,7 +112,7 @@
       "sns.kdeplot(all_muts.sim, shade=True, bw=.25)\n",
       "sns.kdeplot(all_muts.exp, shade=True, bw=.25)\n",
       "axis(xmin=0)\n",
-      "savefig('exp_sim_kde.png')"
+      "savefig('experimental_simulated_kde.png')"
      ],
      "language": "python",
      "metadata": {},
