set_color_palette to set_palette

--- a/analysis1_parallyze.ipynb
+++ b/analysis1_parallyze.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:89e33ef001c6efd45d0ce752b1b6e8ec8d92a5d82b1ab74743f7acd39cf1c571"
+  "signature": "sha256:11c67558b57198d6da1dcb39285da31f93df1daa6f71a2ff9fe71342a7dfd326"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -15,7 +15,7 @@
       "import pandas as pd\n",
       "import seaborn as sns\n",
       "sns.set(style=\"whitegrid\")\n",
-      "sns.set_color_palette(\"Set1\", desat=.6)\n",
+      "sns.set_palette(\"Set1\", desat=0.6)\n",
       "mpl.rc(\"figure\", figsize=(18,12), dpi=600)\n",
       "mpl.rc(\"axes\", titlesize=24, labelsize=16)\n",
       "mpl.rc(\"legend\", fontsize=16)"
@@ -23,7 +23,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 66
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -34,7 +34,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 97
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -45,7 +45,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 100
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -58,7 +58,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 101
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
