more detail in comment

--- a/analysis1_parallyze-Copy0.ipynb
+++ b/analysis1_parallyze-Copy0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:86aa7520d9de87db7ed49f43a1b8760010def89e91bd603975d6213eb8105ccf"
+  "signature": "sha256:7dfe15f6c806e422b13f2bb2d3d2a1b76efe22b2f0326d8752b6ccf401bcaa5a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -17,12 +17,14 @@
       "#data set is pulled from a .csv file created when running Procedure 1\n",
       "#(default is procedure 4). The goal is to overlay these plots. If \n",
       "#evolution has occured, the experimental data will have a longer tail\n",
-      "#than the simulated (see analysis1_parallyze WITHOUT RUNNING IT for a\n",
+      "#than the simulated (see experimental_simulated_hist.png for a\n",
       "#general idea). \n",
       "\n",
       "#The simulated graph isn't working because the .csv file is empty \n",
       "#because I broke the simulation and haven't been able to fix it. I \n",
-      "#tried putting in fake numbers to the file, but it still doesn't work. "
+      "#tried putting in fake numbers to the file, but it still doesn't work. \n",
+      "#In addition, even when the .csv file was filled, the bars of the graph\n",
+      "#weren't the same width."
      ],
      "language": "python",
      "metadata": {},
